<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent"
    tools:context=".FeaturesFragment">

    <ImageButton
        android:id="@+id/resturantBtn"
        android:layout_width="318dp"
        android:layout_height="106dp"
        android:layout_marginTop="452dp"
        android:src="@drawable/eat"
        android:text="Places to Eat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/locBtn"
        android:layout_width="319dp"
        android:layout_height="96dp"
        android:layout_marginTop="56dp"
        android:cropToPadding="false"
        android:src="@drawable/loc_info"
        android:text="Location Information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/hotelBtn"
        android:layout_width="316dp"
        android:layout_height="102dp"
        android:layout_marginTop="240dp"
        android:src="@drawable/hotel"
        android:text="Hotel Rates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>