<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back"
        android:title="Back"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_back"
        android:layout_gravity="center"
        android:gravity="left|start"
        />

    <item
        android:id="@+id/settings"
        android:title="Settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_search"
        android:title=""
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/share"
        android:title="Share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

</menu>