<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="168dp"
        android:layout_height="76dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="112dp"
        android:text="CONTINUE"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelImg" />

    <ImageView
        android:id="@+id/travelImg"
        android:layout_width="361dp"
        android:layout_height="462dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/travel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="Welcome to JHTravels!"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>